Completed Pokemon URI Parsing
URI Parsing is now completed. The dictionary in the
Pokemon_ResourceURI_dictionary.vb file now contains all pokemon with
their associated URI.

Also implemented multiple threads (a.k.a. BackgroundWorker) to complete
tasks of Parsing the URI into the dictionary.

--- a/PokemonBattlePredictor.vbproj
+++ b/PokemonBattlePredictor.vbproj
@@ -106,6 +106,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="Pokemon.vb" />
+    <Compile Include="Pokemon_ResourceURI_dictionary.vb" />
     <Compile Include="RequestPokemon.vb" />
   </ItemGroup>
   <ItemGroup>
