--- a/PokemonBattlePredictor.vbproj
+++ b/PokemonBattlePredictor.vbproj
@@ -71,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Ability_Dictionary.vb" />
+    <Compile Include="Arena.vb" />
     <Compile Include="BattleSetup.Designer.vb">
       <DependentUpon>BattleSetup.vb</DependentUpon>
     </Compile>
@@ -78,6 +79,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Dex_Writer.vb" />
+    <Compile Include="EffectivenessTable.vb" />
     <Compile Include="Form1.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -111,15 +113,13 @@
     <Compile Include="Pokemon_Dictionary.vb" />
     <Compile Include="Pokemon_ResourceURI_dictionary.vb" />
     <Compile Include="Pokemon_Team.vb" />
-<<<<<<< HEAD
+    <Compile Include="Predict.vb" />
     <Compile Include="Progress.Designer.vb">
       <DependentUpon>Progress.vb</DependentUpon>
     </Compile>
     <Compile Include="Progress.vb">
       <SubType>Form</SubType>
     </Compile>
-=======
->>>>>>> origin/master
     <Compile Include="RequestPokemon.vb" />
   </ItemGroup>
   <ItemGroup>
