--- a/PokemonBattlePredictor.vbproj
+++ b/PokemonBattlePredictor.vbproj
@@ -71,13 +71,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Ability_Dictionary.vb" />
+    <Compile Include="Arena.vb" />
     <Compile Include="BattleSetup.Designer.vb">
       <DependentUpon>BattleSetup.vb</DependentUpon>
     </Compile>
     <Compile Include="BattleSetup.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Constants.vb" />
     <Compile Include="Dex_Writer.vb" />
+    <Compile Include="EffectivenessTable.vb" />
     <Compile Include="Form1.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -111,15 +114,14 @@
     <Compile Include="Pokemon_Dictionary.vb" />
     <Compile Include="Pokemon_ResourceURI_dictionary.vb" />
     <Compile Include="Pokemon_Team.vb" />
-<<<<<<< HEAD
+    <Compile Include="Poke_Calculator.vb" />
+    <Compile Include="Predict.vb" />
     <Compile Include="Progress.Designer.vb">
       <DependentUpon>Progress.vb</DependentUpon>
     </Compile>
     <Compile Include="Progress.vb">
       <SubType>Form</SubType>
     </Compile>
-=======
->>>>>>> origin/master
     <Compile Include="RequestPokemon.vb" />
   </ItemGroup>
   <ItemGroup>
