Added game mechanics
The turn-based mechanics of Pokemon are now added. Also added are a
basic understanding of evaluating status moves. Also, on the side, added
CSV parser to implement addition of type moves. In the future, CSV
parser can parse the status move effects.

--- a/PokemonBattlePredictor.vbproj
+++ b/PokemonBattlePredictor.vbproj
@@ -123,6 +123,12 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="RequestPokemon.vb" />
+    <Compile Include="test.Designer.vb">
+      <DependentUpon>test.vb</DependentUpon>
+    </Compile>
+    <Compile Include="test.vb">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="BattleSetup.resx">
@@ -142,6 +148,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Progress.resx">
       <DependentUpon>Progress.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="test.resx">
+      <DependentUpon>test.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
