Added status move evaluation
Implemented evaluation of status moves. Still in debugging phase. Most
of Pokemon status moves as some logic associated with it. Completion is
very near.

--- a/PokemonBattlePredictor.vbproj
+++ b/PokemonBattlePredictor.vbproj
@@ -78,6 +78,7 @@
     <Compile Include="BattleSetup.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Battle_Prediction_Thread.vb" />
     <Compile Include="Constants.vb" />
     <Compile Include="Dex_Writer.vb" />
     <Compile Include="EffectivenessTable.vb" />
@@ -114,10 +115,7 @@
     <Compile Include="Pokemon_Dictionary.vb" />
     <Compile Include="Pokemon_ResourceURI_dictionary.vb" />
     <Compile Include="Pokemon_Team.vb" />
-<<<<<<< HEAD
     <Compile Include="Poke_Calculator.vb" />
-=======
->>>>>>> master
     <Compile Include="Predict.vb" />
     <Compile Include="Progress.Designer.vb">
       <DependentUpon>Progress.vb</DependentUpon>
